--- a/demo/index.html
+++ b/demo/index.html
@@ -31,7 +31,7 @@
       </div>
     </div>
   </div>
-  <script src="js/colorspread.js"></script>
+  <script src="../colorspread.js"></script>
   <script>
     const colorBox = document.getElementById('color-container');
     const output = document.getElementById('output');
